# lksh-enter-2025

./: .env.example  .gitignore  Makefile  README.md  api.dockerfile  docker-compose.yml  openapi.json  pyproject.toml
.github/workflows/: check.yml
src/application/api/: router.py
src/application/cli/: main.py
src/application/core/: dtos.py  service.py
src/application/interfaces/api/: client.py  dtos.py
src/domain/api/: router.py  schema.py
src/domain/cli/: main.py
src/domain/core/: dtos.py  exceptions.py  service.py
src/domain/interfaces/api/: client.py  dtos.py
src/infrastructure/: api.py  cli.py  config.py  exceptions.py  loggers.py
src/presentation/: schema.py
