[project]
name = "src"
version = "0.1.0"
description = "Test assignment for lksh-2025"
authors = [
    {name="Ilya Kuznetsov", email="ilkztsff@gmail.com"},
]
maintainers = [
    {name="Ilya Kuznetsov", email="ilkztsff@gmail.com"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aiohttp >= 3.12.2",
    "fastapi >= 0.114.1",
    "pydantic >= 2.9.1",
    "pydantic-settings >= 2.5.2",
    "python-dotenv >= 1.0.1",
    "python-multipart >= 0.0.20",
    "uvicorn>=0.30.6",
]

[tool.uv]
dev-dependencies = [
    "coverage >= 7.6.1",
    "httpx >= 0.27.0",
    "iniconfig >= 2.0.0",
    "mypy >= 1.11.1",
    "pytest >= 8.3.2",
    "pytest-asyncio >= 0.23.8",
    "python-dateutil >= 2.9.0.post0",
    "pytest-dependency >= 0.6.0",
    "pytest-dotenv >= 0.5.2",
    "pytest-mock >= 3.14.0",
    "ruff >= 0.11.4",
]

[tool.ruff.lint]
#max-line-length = 200
ignore = [
    "E731",
]

[tool.mypy]
python_version = 3.12
disable_error_code = [
    "no-any-return",
]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_subclassing_any = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = false

[tool.pytest.ini_options]
pythonpath = [ ".", "src",]
asyncio_mode="auto"
#filterwarnings = [
#    "error",
#    "ignore::UserWarning",
#]

[pytest]
markers = [
    "application",
    "domain",
    "infrastructure",
    "presentation",
    "interfaces",
    "core",
    "api",
    "cli",
]
